nav-stacked default/blocked variants, dark mode btn-primary fix, padding aliases
- nav-stacked default: no background, no border, blue accent active state, reduced padding
- nav-stacked-blocked: original filled row style as opt-in modifier
- dark mode --ply-btn-default-bg now uses --ply-blue-1 (#4589ff) instead of blue-2
- padding directional classes now support both orders: padding-top-xs and padding-xs-top

--- a/src/scss/components/_colors.scss
+++ b/src/scss/components/_colors.scss
@@ -165,7 +165,7 @@ $border-color: #ccc;
     --ply-color-table-hovered: #353535;
 
     // Buttons
-    --ply-btn-default-bg: #78a9ff;
+    --ply-btn-default-bg: #4589ff;
     --ply-btn-secondary-bg: #a8a8a8;
     --ply-btn-default-color: #161616;
     --ply-btn-secondary-color: #161616;
@@ -276,7 +276,7 @@ $border-color: #ccc;
   --ply-color-table-hovered: #353535;
 
   // Buttons
-  --ply-btn-default-bg: #78a9ff;
+  --ply-btn-default-bg: #4589ff;
   --ply-btn-secondary-bg: #a8a8a8;
   --ply-btn-default-color: #161616;
   --ply-btn-secondary-color: #161616;
